--- a/package.json
+++ b/package.json
@@ -2,19 +2,30 @@
   "name": "inhabit-taxonomy-filter",
   "version": "1.1.1",
   "description": "taxonomy filter for inhabit",
-  "main": "build/index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "test": "tsc && mocha ./dist/*.spec.js ./dist/**/*.spec.js",
+    "test-watch": "concurrently \"tsc --watch\" \"ava dist/**/*.spec.js --watch\""
   },
-  "git":"https://github.com/ArkadiumInc/inhabit-taxonomy-filter.git",
+  "git": "https://github.com/ArkadiumInc/inhabit-taxonomy-filter.git",
   "author": "wishmasterts",
   "license": "ISC",
   "devDependencies": {
-    "inhabit-module-base": "^1.3.16",
-    "jquery": "^3.1.1"
+    "@types/chai": "^4.0.4",
+    "@types/mocha": "^2.2.42",
+    "concurrently": "^3.5.0",
+    "cz-conventional-changelog": "^2.0.0",
+    "inhabit-module-base": "^1.6.0",
+    "mocha": "^3.5.0",
+    "typescript": "^2.5.2"
   },
   "dependencies": {
-    "@types/lodash": "^4.14.43",
-    "lodash": "^4.17.2"
+    "chai": "^4.1.2"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
