--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "prepublish": "npm run test",
+    "prepublish": "npm run test && npm run size",
     "test": "tsc && mocha ./dist/*.spec.js ./dist/**/*.spec.js",
+    "size": "size-limit",
     "test-watch": "concurrently \"tsc --watch\" \"ava dist/**/*.spec.js --watch\""
   },
   "git": "https://github.com/ArkadiumInc/inhabit-taxonomy-filter.git",
@@ -18,6 +19,7 @@
     "concurrently": "^3.5.0",
     "cz-conventional-changelog": "^2.0.0",
     "mocha": "^3.5.0",
+    "size-limit": "^0.11.0",
     "typescript": "^2.5.2"
   },
   "dependencies": {
@@ -27,5 +29,11 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
-  }
+  },
+  "size-limit": [
+    {
+      "path": "dist/index.js",
+      "limit": "2 KB"
+    }
+  ]
 }
